List & Text Styling

--- a/list.html
+++ b/list.html
@@ -6,13 +6,26 @@
     <title>List</title>
     <!-- Internal  CSS-->
     <style>
-        h3{
-            color: red;
-        }
-        
+      h3 {
+        color: red;
+        font-family: "Kalam", cursive;
+      }
+      .content {
+        font-family: "Dancing Script", cursive;
+      }
     </style>
     <!-- External CSS -->
-    <link rel="stylesheet" href="list.css">
+    <link rel="stylesheet" href="list.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Kalam:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h3>Hobbies</h3>
@@ -31,7 +44,7 @@
     </ul>
 
     <!-- Inline CSS -->
-    <h3 style="color: blue;">Hobbies</h3>
+    <h3 style="color: blue">Hobbies</h3>
     <!-- Ordered List -->
     <ol type="i" start="3">
       <li>Sleeping</li>
@@ -47,7 +60,7 @@
       </li>
     </ol>
     <!-- Random generated text -->
-    <p>
+    <p class="content">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus,
       fugiat soluta labore cumque inventore perspiciatis quos quod natus vitae
       quia aperiam nulla non ratione eum placeat excepturi exercitationem nam
@@ -55,16 +68,16 @@
     </p>
     <!-- Anchor tags and their uses -->
     <a href="https://docs.emmet.io">Emmet</a>
-    <br>
+    <br />
     <!-- For new tab -->
     <a href="https://youtube.com" target="_blank">Youtube</a>
     <!-- tel:number -> to open number in the dailer-->
-    <br>
+    <br />
     <!-- To open dailer -->
     <a href="tel:+91 6281855239">Call me</a>
-    <br>
+    <br />
     <a href="https://wa.me/+91 6281855239">Ping me in WhatsApp</a>
-    <br>
+    <br />
     <!-- To open mail compose -->
     <a href="mailto: manideep.kothapalli@proclink.com">Mail Us</a>
   </body>
