--- a/list.html
+++ b/list.html
@@ -30,7 +30,7 @@
   <body>
     <h3>Hobbies</h3>
     <!-- Unordered List -->
-    <ul>
+    <ul class="Hobbies">
       <li>Sleeping</li>
       <li>Cooking</li>
       <li>
