--- a/task.html
+++ b/task.html
@@ -5,34 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task</title>
     <style>
-        .container{
-            background-color: hsl(201.87deg 100% 81.18%);
-            padding: 2%;
-            border-radius: 15px;
-            border-left: 10px solid hsl(201.86deg 100% 53.73%);
-            padding-left: 20px;
-            width: 40%;
-        }
-        .content{
-            font-family: 'Franklin Gothic', 'Arial Narrow', Arial, sans-serif;
-            
-        }
-        h4{
-            font-family: sans-serif;
-            font-weight: 1000;
-        }
+      .container {
+        background-color: hsl(201.87deg 100% 81.18%);
+        padding: 2%;
+        border-radius: 15px;
+        border-left: 10px solid hsl(201.86deg 100% 53.73%);
+        padding-left: 20px;
+        /* width: 40%; */
+        max-width: 40%;
+        font-family:sans-serif;
+      }
+      /*
+      % - How much percent in that cointainer
+      vh,vw - how much percent of screen size   
+      */
     </style>
   </head>
   <body>
     <div class="container">
-        <h4>Intended Audience</h4>
-      <p class="content">
+      <h4>Intended Audience</h4>
+      <p>
         This tutorial assumes that you already have a static React site
-        (Gatsby/Next) being deployed on Vercel or Netlify. <br /><br />
+        (Gatsby/Next) being deployed on Vercel or Netlify.
+      </p>
+      <p>
         It's written with the intermediate React developer in mind; if you're
         newer to the modern JS ecosystem, it might be a bit hard to follow.
       </p>
     </div>
-    <img src="Task-1.png" alt="">
+    <!-- <img src="Task-1.png" alt="" /> -->
   </body>
 </html>
