List & Task on lists

--- a/list.html
+++ b/list.html
@@ -65,7 +65,7 @@
       fugiat soluta labore cumque inventore perspiciatis quos quod natus vitae
       quia aperiam nulla non ratione eum placeat excepturi exercitationem nam
       magnam.
-    </p>
+    </p> <p class="content">Para2</p>
     <!-- Anchor tags and their uses -->
     <a href="https://docs.emmet.io">Emmet</a>
     <br />
