--- a/task-2.html
+++ b/task-2.html
@@ -13,10 +13,10 @@
       .container {
         width: 50vh;
         padding: 1%;
-        place-content: center;
+        /* place-content: center; */
+        text-align: center;
         margin-left: auto;
         margin-right: auto;
-        /* display: block; */
       }
       .title {
         text-align: center;
@@ -30,7 +30,7 @@
         text-align: center;
         font-family: sans-serif;
       }
-      .para {
+      .container2{
         color: hsl(0 38 87);
         text-align: center;
         font-family: sans-serif;
@@ -41,6 +41,10 @@
       }
       body {
         background-color: hsl(2deg 88.24% 6.67%);
+        background-image: linear-gradient(to top, #785034, #e7b771, #785034);
+      }
+      .dots {
+        color: hsl(0 38 87);
       }
     </style>
   </head>
@@ -49,8 +53,11 @@
       <img class="image" src="task-2.jpg" alt="Beast Poster" />
       <div class="container2">
         <h1 class="title">Beast</h1>
-        <p class="list">2022 • Action/Dark Comedy • 2h 38m</p>
-        <p class="para">
+        <p class="list">
+          2022 <span class="dots">•</span> Action/Dark Comedy
+          <span class="dots">•</span> 2h 38m
+        </p>
+        <p>
           Beast is an upcoming Indian Tamil-language action thriller film
           written and directed by Nelson and produced by Sun Pictures. The film
           stars Vijay and Pooja Hegde, while Selvaraghavan, Yogi Babu and Redin
